# erlang_syntax_rs

./: Cargo.toml  README.md  build.rs
examples/: hrl2rust.rs
src/: anno.rs  ast.rs  erlang.l  lib.rs
tests/: parser_tests.rs
